--- a/src/assets/scss/_select.scss
+++ b/src/assets/scss/_select.scss
@@ -5,14 +5,9 @@
 	display: flex;
 	width: 100%;
 	margin-bottom: 0;
-	z-index: 50;
+	z-index: 2;
 }
 
-
-.choices.is-open {
-	border-bottom: 0.7px solid $gray-light;
-	border-radius: 0;
-}
 
 .choices[data-type*=select-one] .choices__inner {
 	padding-bottom: 0;
@@ -44,7 +39,7 @@
 	border: none;
 	right: 0;
 	background-image: url('../images/arrow.svg');
-	z-index: 3;
+	z-index: 5;
 }
 
 .choices[data-type*=select-one].is-open:after {
@@ -54,7 +49,7 @@
 	background-image: url('../images/arrow.svg');
 	transform: rotate(180deg);
 	transform-origin: bottom;
-	z-index: 3;
+	z-index: 5;
 
 }
 
@@ -65,19 +60,18 @@
 	background-color: #fff;
 	border: none;
 	border-bottom: 0.7px solid $gray-light;
-	top: 100%;
+	top: 33px;
 	margin-top: -5px;
 	border-bottom-left-radius: 0;
 	border-bottom-right-radius: 0;
-
-	z-index: 50;
+	z-index: 10;
 }
 
 .choices__list--dropdown .choices__item {
 	position: relative;
 	padding: 8px 0;
 	font-size: 14px;
-	z-index: 60;
+	z-index: 99;
 }
 
 .choices__item.choices__item--choice.is-selected {
