--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -24,6 +24,7 @@ body {
 	min-height: 480px;
 	display: flex;
 	margin: 0 auto;
+	z-index: 1;
 
 	.signup__background {
 		display: flex;
@@ -58,12 +59,14 @@ body {
 		flex-direction: column;
 		padding: 39px 22px 32px 21px;
 		background-color: $white;
+		z-index: 1;
 
 		.form__registered {
 			position: relative;
 			display: flex;
 			flex-direction: column;
 			height: 100%;
+			z-index: 1;
 		}
 
 		.form__title {
@@ -76,8 +79,9 @@ body {
 
 		.form__descr {
 			overflow: hidden;
+			text-overflow: ellipsis;
 			display: -webkit-box;
-			-webkit-line-clamp: 3;
+			-webkit-line-clamp: 2;
 			-webkit-box-orient: vertical;
 			@include text ($color: $text-color);
 			margin-bottom: 17px;
@@ -160,11 +164,9 @@ body {
 	margin-bottom: 20px;
 
 	.form__item {
-		position: relative;
 		width: 100%;
 		display: flex;
 		flex-direction: column;
-		z-index: 1;
 
 		.fieldset__legend {
 			@include text-light ($color: $gray);
@@ -175,7 +177,7 @@ body {
 		}
 
 		.form__input:focus {
-			border-bottom: 0.7px solid #ddd;
+			border-bottom: 1px solid #b8b8b8;
 		}
 
 		.form__input {
